--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,60 @@
+@import "~@fortawesome/fontawesome-free/css/all.css";
+
 /* You can add global styles to this file, and also import other style files */
+html,body {
+  margin:0;
+  padding:0;
+}
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: url("assets/img/bg.jpg") no-repeat center top #ccc;
+}
+
+.clearfix {
+  clear: both;
+}
+
+
+.container {
+  width: 980px;
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  *zoom: 1;
+}
+.container:before,
+.container:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.container:after {
+  clear: both;
+}
+.container-fluid {
+  padding-right: 20px;
+  padding-left: 20px;
+  *zoom: 1;
+}
+.container-fluid:before,
+.container-fluid:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.container-fluid:after {
+  clear: both;
+}
+
+@media (max-width: 767px) {
+  .container-fluid {
+    padding: 0;
+  }
+  .container {
+    width: auto;
+  }
+}
+@media (min-width: 768px) and (max-width: 979px) {
+
+}
