--- a/src/app/chat/chat-input/chat-input.component.html
+++ b/src/app/chat/chat-input/chat-input.component.html
@@ -1,3 +1,11 @@
-<p>
-  chat-input works!
-</p>
+
+<div class="chat-input-box">
+  <div class="chat-input-text-container">
+    <textarea [(ngModel)]="chatInput" (keydown.enter)="sendChat(chatInput)"></textarea>
+  </div>
+  <div class="chat-input-button-container">
+    <button type="button" (click)="sendChat(chatInput)">
+      <i class="fas fa-paper-plane"></i>
+    </button>
+  </div>
+</div>
